# example-pdm-multipackage-repo

./: README.md
local-source/: package1-0.1.0-py3-none-any.whl  package2-0.1.0-py3-none-any.whl
master-package/: README.md  pyproject.toml
package1/: pyproject.toml
package2/: pyproject.toml
