[project]
name = "package2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nuno Cravino", email = "ncravino@users.noreply.github.com"},
]
dependencies = [
    "numpy>=2.2.5"
    
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
